<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".PlayerOneName">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playername"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:typeface="sans"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        android:letterSpacing="0.1"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_palyername"
        android:hint="@string/hindplayername"
        style="@style/inputbox_style"
        />



    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="20dp">

        <RadioButton
            android:id="@+id/radio_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:drawablePadding="15sp"
            android:checked="true"
            android:drawableEnd="@drawable/ic_x"
            android:onClick="clickRadio"/>

        <RadioButton
            android:id="@+id/radio_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15sp"
            android:drawableEnd="@drawable/ic_o"
            android:onClick="clickRadio"/>

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/game_mode"
            android:background="@color/background"
            android:textColor="@color/teal_200"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
        <RadioGroup
            android:id="@+id/radio_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp">
            <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:text="@string/easy"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="onClickMode"/>
            <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="15sp"
                android:text="@string/hard"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="onClickMode"/>

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gameStart"
        android:paddingVertical="14sp"
        style="@style/button_design"
        android:text="@string/start_btn"/>

</androidx.appcompat.widget.LinearLayoutCompat>